; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/tests/extr_attr.c_test_attr__ready.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/tests/extr_attr.c_test_attr__ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_attr__enabled = common dso_local global i32 0, align 4
@ready = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_attr__ready() #0 {
  %1 = load i32, i32* @test_attr__enabled, align 4
  %2 = call i64 @unlikely(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i32, i32* @ready, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %4
  store i32 1, i32* @ready, align 4
  br label %8

8:                                                ; preds = %7, %4, %0
  ret void
}

declare dso_local i64 @unlikely(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
